project(CPPPTRICKS)
cmake_minimum_required(VERSION 3.6)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -O2 -std=c++98")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -Os -std=c++11")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -std=c++11")

if(0)
# fork_test.cpp
set(fork_test_SRC fork_test.cpp)
add_executable(fork_test ${fork_test_SRC})


# class_derive_1.cpp
set(class_derive_1_SRC class_derive_1.cpp)
add_executable(class_derive_1 ${class_derive_1_SRC})

# class_derive_2.cpp
set(class_derive_2_SRC class_derive_2.cpp)
add_executable(class_derive_2 ${class_derive_2_SRC})

# cpp_01.cpp
set(cpp_01_SRC cpp_01.cpp)
add_executable(cpp_01 ${cpp_01_SRC})

# test_new.cpp
set(test_new_SRC test_new.cpp)
add_executable(test_new ${test_new_SRC})

# varaibles.cpp
set(varaibles_SRC varaibles.cpp)
add_executable(varaibles ${varaibles_SRC})

# varaibles.cpp
set(size_vs_empty_SRC size_vs_empty.cpp)
add_executable(size_vs_empty ${size_vs_empty_SRC})

# toy_coroutine.cpp
set(toy_coroutine_SRC toy_coroutine.cpp)
add_executable(toy_coroutine ${toy_coroutine_SRC})

# Duffs_device.cpp
set(Duffs_device_SRC Duffs_device.cpp)
add_executable(Duffs_device ${Duffs_device_SRC})

# class_derive_3.cpp
set(class_derive_3_SRC class_derive_3.cpp)
add_executable(class_derive_3 ${class_derive_3_SRC})

# class_derive_1.cpp
set(class_derive_1_SRC class_derive_1.cpp)
add_executable(class_derive_1 ${class_derive_1_SRC})

# Template_tricks.cpp
set(Template_tricks_SRC Template_tricks.cpp)
add_executable(Template_tricks ${Template_tricks_SRC})

# Comma_expression_tricks.cpp
set(Comma_expression_tricks_SRC Comma_expression_tricks.cpp)
add_executable(Comma_expression_tricks ${Comma_expression_tricks_SRC})

# reverse_pair_tricks.cpp
set(reverse_pair_tricks_SRC reverse_pair_tricks.cpp)
add_executable(reverse_pair_tricks ${reverse_pair_tricks_SRC})

# other_tricks.cpp
set(other_tricks_SRC other_tricks.cpp)
add_executable(other_tricks ${other_tricks_SRC})

# question_tricks.cpp
set(question_tricks_SRC question_tricks.cpp)
add_executable(question_tricks ${question_tricks_SRC})

# null_and_virtual_func.cpp
set(null_and_virtual_func_SRC null_and_virtual_func.cpp)
add_executable(null_and_virtual_func ${null_and_virtual_func_SRC})

endif(0)


# cpp_02.cpp
set(cpp_02_SRC cpp_02.cpp)
add_executable(cpp_02 ${cpp_02_SRC})

